# FinTrack

./: .gitignore  README.md  docker-compose.yml
.envs/dev/: backend.env  db.env  frontend.env
.envs/prod/: backend.env  db.env  frontend.env
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20240225_01_initial.py  20240302_02_add_budgets.py  20240302_03_add_manual_rate_flag.py
backend/app/: initial_data.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: accounts.py  auth.py  budgets.py  categories.py  exchange_rates.py  reports.py  transactions.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: crud_account.py  crud_budget.py  crud_category.py  crud_exchange_rate.py  crud_transaction.py  crud_user.py
backend/app/db/: base.py
backend/app/models/: account.py  budget.py  category.py  currency.py  exchange_rate.py  transaction.py  user.py
backend/app/schemas/: account.py  auth.py  budget.py  category.py  exchange_rate.py  report.py  transaction.py  user.py
backend/app/services/: conversion.py  defaults.py  exchange_rates.py  reporting.py
backend/app/worker/: scheduler.py
backend/tests/: conftest.py  test_auth.py  test_budgets.py  test_exchange_rates.py  test_reports.py  test_transactions.py
frontend/: Dockerfile  api.py  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Sidebar.tsx
(+13 files in other folders)
